# doorsopen-toronto

./: .gitignore  Makefile  README.md  doorsopen.db  metadata.json  pyproject.toml
.github/workflows/: deploy.yml
opendata_toronto_doors_open/: cli.py  service.py
tests/: fixtures.py  test_service.py
