[tool.poetry]
name = "opendata-toronto-doors-open"
version = "0.1.0"
description = "Datasette of the City of Toronto's DoorsOpen data."
authors = ["Myles Braithwaite <me@mylesbraithwaite.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "opendata_toronto_doors_open"}]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
requests = "^2.28.2"
sqlite-utils = "^3.30"

[tool.poetry.scripts]
doorsopen-toronto = "opendata_toronto_doors_open.cli:cli"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.2.0"
pytest = "^7.3.0"
pytest-cov = "^4.0.0"
responses = "^0.23.1"
ruff = "^0.0.261"
types-requests = "^2.28.11.17"

[tool.ruff]
line-length = 80

[tool.black]
line-length = 80

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
